--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,6 +1,14 @@
 terratowns_endpoint="https://terratowns.cloud/api"
-bucket_name="hpv525jmgipv5o35"
-index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
-error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
-assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
-content_version=1
+#bucket_name="hpv525jmgipv5o35"
+#index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
+#error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
+#assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
+#content_version=1
+arcanum = {
+  public_path = "/workspace/terraform-beginner-bootcamp-2023/public/arcanum"
+  content_version = 2 
+}
+payday = {
+  public_path = "/workspace/terraform-beginner-bootcamp-2023/public/payday"
+  content_version = 1 
+}
